Using kernel in virtual environment

--- a/non_linear_least_squares.ipynb
+++ b/non_linear_least_squares.ipynb
@@ -201,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "demos",
    "language": "python",
-   "name": "python3"
+   "name": "demos"
   },
   "language_info": {
    "codemirror_mode": {
