--- a/fit_histogram.ipynb
+++ b/fit_histogram.ipynb
@@ -147,9 +147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "demos",
    "language": "python",
-   "name": "python3"
+   "name": "demos"
   },
   "language_info": {
    "codemirror_mode": {
