Improvements demo no-linear least squares

--- a/non_linear_least_squares.ipynb
+++ b/non_linear_least_squares.ipynb
@@ -5,7 +5,7 @@
    "id": "5335ad7a-3233-47a4-9005-2890ec80b0e4",
    "metadata": {},
    "source": [
-    "# Least-squares regression"
+    "# No-linear least squares"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "daec43a3-7154-43a1-bc6f-2a077b1e7b8c",
    "metadata": {},
    "source": [
-    "In the previous *linear* least-squares regression the dependent variable Y followed a normal distribution and the fit model was linear in the parameters.\n",
+    "In the *linear* least-squares regression the dependent variable Y followed a normal distribution and the fit model was linear in the parameters.\n",
     "We are now going to consider the case where Y is also normal but the fit model is not linear in the parameters."
    ]
   },
@@ -35,7 +35,7 @@
     "import numpy as np\n",
     "xdata = np.array([0., 0.2, 0.4, 0.6, 0.8, 1., 1.2, 1.4, 1.6, 1.8, 2.])\n",
     "ydata = np.array([0.92, 0.884, 0.626, 0.504, 0.481, 0.417, 0.288, 0.302, 0.177, 0.13, 0.158])\n",
-    "ysigma = np.array([0.1, 0.082, 0.067, 0.055, 0.045, 0.037, 0.03, 0.025, 0.02, 0.017, 0.014])"
+    "yerror = np.array([0.1, 0.082, 0.067, 0.055, 0.045, 0.037, 0.03, 0.025, 0.02, 0.017, 0.014])"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "import likefit\n",
-    "fitter = likefit.LeastSquares(xdata, ydata, fit_model, ysigma)"
+    "fitter = likefit.LeastSquares(xdata, ydata, fit_model, yerror)"
    ]
   },
   {
