Improvements demos fit histogram

--- a/fit_histogram.ipynb
+++ b/fit_histogram.ipynb
@@ -5,7 +5,7 @@
    "id": "404dad1d-6b49-4fed-98f8-a69183a53983",
    "metadata": {},
    "source": [
-    "# Poisson regression"
+    "# Fit histogram"
    ]
   },
   {
@@ -141,8 +141,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitter.plot_fit()"
+    "import danatools\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "fitter.plot_fit(xlabel=\"x\", ylabel=\"Counts\", ax=ax)\n",
+    "fig.savefig(\"fit_histogram1.svg\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd94497c-2e3c-433a-bb6c-c837e7499835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(fitter.plot_fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5cb0a91-6a1e-47ac-ac22-de8650d5a2d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_xlabel(\"Normalization\")\n",
+    "ax.set_ylabel(\"Mean\")\n",
+    "fitter.plot_confidence_regions(parx_index=0, pary_index=1, ax=ax)\n",
+    "danatools.savefigs(\"fit_histogram2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a7dba61-f1c7-4f76-acc1-2f53cd77a818",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
