Improved text in demo

--- a/linear_least_squares.ipynb
+++ b/linear_least_squares.ipynb
@@ -5,7 +5,7 @@
    "id": "a67f687c-7c4e-48b7-baa9-23b23a932a35",
    "metadata": {},
    "source": [
-    "# Linear least-squares regression"
+    "# Linear least-squares"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "source": [
     "We defined X and Y data as numpy arrays of 9 elements. The X and Y variables have completely different meanings, while the elements of X have fixed values, the elements of Y are random variables. \n",
     "\n",
-    "A least-squares fit assumes that each element of Y follows a *normal distribution*, $y_i \\sim \\mathcal{N}(\\mu_i, \\sigma_i)$, where $\\mu_i$ is the mean of the distribution, while $\\sigma_i$ is its standard deviation. While the means $\\mu_i$ are adjusted during the fit, the corresponding standard deviations $\\sigma_i$ are known:"
+    "A least-squares fit assumes that each element of Y follows a *normal distribution*, $y_i \\sim \\mathcal{N}(\\mu_i, \\sigma_i)$, where $\\mu_i$ is the mean of the distribution, while $\\sigma_i$ is its standard deviation. The means $\\mu_i$ are adjusted during the fit. The standard deviations $\\sigma_i$ are known."
    ]
   },
   {
