Adding likefit install command to demo

--- a/linear_least_squares.ipynb
+++ b/linear_least_squares.ipynb
@@ -115,6 +115,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72400267-aeee-492b-8a00-80034d5989c1",
+   "metadata": {},
+   "source": [
+    "Install likefit if necessary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cdd7c36-ffbc-421b-8933-0d9ee7aa592e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install likefit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a6164ee9-5b8f-47eb-8379-f6efe7592ea5",
