Mejoras demo ajuste de histogram

--- a/fit_histogram.ipynb
+++ b/fit_histogram.ipynb
@@ -127,6 +127,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feba529f-b295-48fa-9f93-794572cdd26d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimators = fitter.get_estimators()\n",
+    "errors = fitter.get_errors()\n",
+    "print(f\"Normalization: {estimators[0]:.1f} ± {errors[0]:.1f}\")\n",
+    "print(f\"Mean: {estimators[1]:.3f} ± {errors[1]:.3f}\")\n",
+    "print(f\"Standard deviation: {estimators[2]:.3f} ± {errors[2]:.3f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "48ebea92-9e2c-4865-8e8e-81e9c671becd",
    "metadata": {},
@@ -145,7 +159,7 @@
     "import matplotlib.pyplot as plt\n",
     "fig, ax = plt.subplots()\n",
     "fitter.plot_fit(xlabel=\"x\", ylabel=\"Counts\", ax=ax)\n",
-    "fig.savefig(\"fit_histogram1.svg\")"
+    "# fig.savefig(\"fit_histogram1.svg\")"
    ]
   },
   {
@@ -170,16 +184,8 @@
     "ax.set_xlabel(\"Normalization\")\n",
     "ax.set_ylabel(\"Mean\")\n",
     "fitter.plot_confidence_regions(parx_index=0, pary_index=1, ax=ax)\n",
-    "danatools.savefigs(\"fit_histogram2\")"
+    "# fig.savefig(\"fit_histogram2.svg\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a7dba61-f1c7-4f76-acc1-2f53cd77a818",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
