Add likefit install instructions

--- a/fit_histogram.ipynb
+++ b/fit_histogram.ipynb
@@ -78,6 +78,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afb1b8f8-4fc3-4d04-be04-2cfb82bc0a36",
+   "metadata": {},
+   "source": [
+    "Install with: `pip install likefit`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4a8f2c21-1a3c-4f8a-8f6b-dd8bb125d494",
@@ -186,6 +194,14 @@
     "fitter.plot_confidence_regions(parx_index=0, pary_index=1, ax=ax)\n",
     "# fig.savefig(\"fit_histogram2.svg\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50cc488a-4418-4af1-ab29-838e7bf02b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
